--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.1",
     "html2canvas": "^1.4.1",
     "next": "14.0.3",
     "react": "^18",
